<resources>
    <string name="app_name">成Line</string>
    //Barcode part

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_msgBulletin">訊息公告</string>

    <!-- Friend Long Click Menu & String array -->
    <string name="FLCM_title">選項</string>
    <string-array name="friendLongClickMenu">
        <item>刪除好友</item>
        <item>撥打電話</item>
        <item>返回</item>
    </string-array>

    <!-- Group Long Click Menu & String array -->
    <string name="GLCM_title">選項</string>
    <string-array name="groupLongClickMenu">
        <item>退出群組</item>
        <item>返回</item>
    </string-array>

    <!-- Notification id, channel id, channel name -->
    <string name="CHANNEL_ID_ReceiveMsg">0</string>
    <string name="CHANNEL_NAME_ReceiveMsg">Receive Message Notification</string>
    <string name="CHANNEL_ID_AddFriend">1</string>
    <string name="CHANNEL_NAME_AddFriend">Add Friend Notification</string>
    <string name="CHANNEL_ID_AddGroup">2</string>
    <string name="CHANNEL_NAME_AddGroup">Add Group Notification</string>
    <string name="CHANNEL_ID_ReceiveAnnoc">3</string>
    <string name="CHANNEL_NAME_ReceiveAnnoc">Receive Announcement Notification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
u
    <!-- Some Strings -->
    <string name="change_icon_succeed">更改頭像成功</string>
    <string name="change_user_name">更改暱稱</string>
    <string name="new_name">新名字(16字元內)</string>
    <string name="confirm_name_format">請確認名字格式</string>
    <string name="change_name_succeed">更改名字成功</string>
    <string name="change_name_fail">更改名字失敗</string>
    <string name="ok">確認</string>
    <string name="cancel">取消</string>

    <string name="default_intro">brief introduction of myself</string>
    <string name="new_intro">新狀態(36字元內)</string>
    <string name="change_intro_succeed">更改狀態成功</string>
    <string name="change_intro_fail">更改狀態失敗</string>

    <string name="default_password">12345678</string>
    <string name="new_password">新密碼(36字元內)</string>
    <string name="change_password_succeed">變更密碼成功</string>
    <string name="change_password_fail">變更密碼失敗</string>

    <string name="assignment">作業</string>
    <string name="exam">考試</string>
    <string name="vote">投票</string>
    <string name="title">標題</string>
    <string name="place">地點</string>
    <string name="content">內文</string>
    <string name="date">日期</string>
    <string name="select_date">選擇日期</string>
    <string name="time">時間</string>
    <string name="select_time">選擇時間</string>
    <string name="annoc_OK">發布公告成功</string>
    <string name="annoc_fail">發布失敗</string>

    <string name="vote_way">投票方式</string>
    <string name="AD_vote">贊同或反對</string>
    <string name="MC_vote">單選式</string>
    <string name="MCDT">請輸入選項(至少兩項)</string>
    <string name="MC_hint">選項文字</string>
    <string name="MCEM1">不能空白</string>
    <string name="MCEM2">至少需有兩個選項</string>
    <string name="MCEM3">選項格式錯誤</string>
    <string name="yes">同意</string>
    <string name="no">不同意</string>
    <string name="MCC">選項</string>
    <string name="sure_vote">確定投票嗎?</string>
    <string name="voting_s">投票成功 :D</string>
    <string name="voting_f">投票失敗 :(</string>

    <string name="imagedescription">imageDescription</string>

</resources>
